2003-07-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved Astro::Catalog::BaseQuery to be Astro::Catalog::Query in
          preparation for it be a proper polymorphic factory class for
          generic catalogue queries.
        
        * Moved actualy query sub-classes down a directory level to allow
          for the Query.pm file 
          
        * Added a WebService transport class, probably needs some added
          generalisation, but our sample of web services is still small.
          
        * Added a Sesame.pm class to do CDS Sesame lookups by target name
          using the new WebService transport class. 
                       
2003-07-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved the catalogue query classes to chare a common namespace,
          current classes now inherit from the Astro::Catalog::Transport::REST
          class. While future web and GRID service classes will inherit from
          related classes. All the Astro::Catalog::Transport classes inherit
          from Tim's BaseQuery class.
          
        * Moved REST specific setup from BaseQuery to Transport::REST class  

        * t/*.t: Test scripts modified to work within new framework.
        
        * t/1_compile.t: Now chekc for presence of Astro::Aladin module
        
2003-07-27  Tim Jenness <timj@jach.hawaii.edu>

        * Added sorting and filtering of catalogues.

2003-07-26  Tim Jenness <timj@jach.hawaii.edu> 
            & Alasdiar Allan <aa@astro.ex.ac.uk>
            
        * Added pluggable IO.
            
2003-07-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * t/catalog.t: Tests fixed to reflect the new two decimal place
          precisions generated by using Astro::Coords objects
          
2003-07-24  Tim Jenness <timj@jach.hawaii.edu>

	* BaseQuery/BaseQuery.pm: Write base class for catalog query classes.

	* Catalog.pm (_read_cluster): No longer use ra() and dec() methods