@@ -1,3 +1,7 @@
+2003-07-30  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* IO/TST.pm: Add TST format reader. Still has debug.
+
 2003-07-29  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Moved Astro::Catalog::BaseQuery to be Astro::Catalog::Query in
